--- a/ui/layout.css
+++ b/ui/layout.css
@@ -1,4 +1,8 @@
 :root {
+    --clr-back: #20202B;
+    --clr-pane: #2D2F34;
+    --clr-face: #BFCDE7;
+
     --ratio: 1.25;
     --step-0: 1rem;
     --step-1: calc(var(--step-0) * var(--ratio));
@@ -35,8 +39,8 @@ body {
 #container {
     display: flex;
     width: 400vw;
-    transition: transform 0.6s ease;
-    background: #20202b;
+    transition: transform 0.4s ease;
+    background: var(--clr-back);
 }
 
 .view {
@@ -50,14 +54,14 @@ nav {
     display: flex;
     align-items: center;
     justify-content: start;
-    background: #20202b;
-    color: #BFCDE7;
+    background: var(--clr-back);
+    color: var(--clr-face);
     padding-right: var(--step-14);
 }
 
 nav > h1 {
     opacity: 0%;
-    transition: opacity 0.8s linear;
+    transition: opacity 0.6s linear;
 }
 
 #breadcrumb {
@@ -77,12 +81,12 @@ nav > h1 {
 
 #bcselect {
     position: absolute;
-    border-bottom: 3px solid #BFCDE7;
+    border-bottom: 3px solid var(--clr-face);
     width: 14.286%;
     height: 100%;
     left: 0%;
     top: 0%;
-    transition: left 0.6s ease;
+    transition: left 0.4s ease;
 }
 
 #bcselect.command {left:28.571%}
