--- a/ui/content/graph.css
+++ b/ui/content/graph.css
@@ -1,6 +1,21 @@
 #graph {
+    position: relative;
     background: var(--clr-pane);
     margin-top: var(--step-1);
     box-shadow: rgba(0, 0, 0, 0.4) 0px 4px 12px;
     height: 100%;
+}
+
+#graph > .buttons {
+    position:absolute;
+    right: 0;
+    padding: var(--step-0);
+}
+
+#graph > .buttons > .write {
+    height: var(--step-6);
+    border: 3px solid var(--clr-face);
+    border-radius: 100%;
+    padding: var(--step--3);
+    cursor: pointer;
 }
