--- a/ui/layout.css
+++ b/ui/layout.css
@@ -2,6 +2,8 @@
     --clr-back: #20202B;
     --clr-pane: #2D2F34;
     --clr-face: #BFCDE7;
+    --clr-red: #E7BFBF60;
+    --clr-green: #4CAF5060;
 
     --ratio: 1.25;
     --step-0: 1rem;
