--- a/ui/layout.css
+++ b/ui/layout.css
@@ -2,6 +2,7 @@
     --clr-back: #20202B;
     --clr-pane: #2D2F34;
     --clr-face: #BFCDE7;
+    --clr-face-fade: #BFCDE740;
     --clr-red: #E7BFBF60;
     --clr-green: #4CAF5060;
 
@@ -26,6 +27,8 @@
     --step--2: calc(var(--step--1) / var(--ratio));
     --step--3: calc(var(--step--2) / var(--ratio));
     --step--4: calc(var(--step--3) / var(--ratio));
+    --step--5: calc(var(--step--4) / var(--ratio));
+    --step--6: calc(var(--step--5) / var(--ratio));
 }
 
 *, *::before, *::after { box-sizing: border-box }
@@ -36,6 +39,20 @@ body {
     font-family: sans-serif;
     font-size: 16px;
     box-sizing: border-box;
+}
+
+input, select, textarea, button {
+    font: inherit;
+    color: var(--clr-face);
+}
+
+input {
+    border:none;
+    background-image:none;
+    background-color:transparent;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
 }
 
 #container {
