--- a/ui/content/network.css
+++ b/ui/content/network.css
@@ -47,9 +47,18 @@
     /* width: var(--step-10);
     height: var(--step-5); */
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     margin-bottom: var(--step-1);
+}
+
+.network-box .network-attributes .network-head {
+    /* width: var(--step-10);
+    height: var(--step-5); */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: var(--step-0);
 }
 
 .network-box .netconn-buttons {
@@ -106,4 +115,11 @@
 
 .network-box .device-connect > svg {
     cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .network-box .netconn-buttons > div {
+        height: var(--step-4);
+        border: 2px solid var(--clr-face);
+    }
 }
